# fast-pypi

./: .coverage  .gitignore  CHANGELOG.md  Makefile  pyproject.toml
.github/workflows/: checks.yaml
fast_pypi/: __init__.py  config.py  get_backend.py  package_rbac.py  router.py
fast_pypi/backend/: __init__.py  interface.py
fast_pypi/backend/azure_blob/: azure_blob_utils.py  env.py  interface.py
fast_pypi/backend/localfs/: interface.py
fast_pypi/backends/: __init__.py  interface.py
fast_pypi/backends/azure_blob/: azure_blob_utils.py  interface.py
fast_pypi/backends/localfs/: interface.py
fast_pypi/pypi/: __init__.py  package_rbac.py  router.py  utils.py
fast_pypi/pypi/templates/: simple_index.html  simple_index_project.html
scripts/: checks-pyright.sh  checks-ruff.sh  checks.sh  tests.sh  tools.sh
scripts/local_dev/: __main__.py
tests/: helpers.py  test.env
tests/e2e/: conftest.py  test_poetry.py  test_uv.py  utils.py
tests/e2e/demo_app/: __main__.py  app.py
tests/e2e/publishable_templates/example_package_poetry/: .gitignore  pyproject.toml
tests/e2e/publishable_templates/example_package_poetry/src/: version.py
tests/e2e/publishable_templates/example_package_uv/: pyproject.toml
tests/e2e/scripts/: test-e2e-common.sh  test-e2e-poetry.sh  test-e2e-uv.sh
tests/local_dev/: __main__.py
tests/unit/: test_general_config.py
tests/unit/backends/: conftest.py  test_backends_e2e.py  test_get_backend.py
tests/unit/backends/azure_blob/: test_azure_blob_env.py  test_azure_blob_interface.py  test_azure_blob_utils.py
tests/unit/backends/localfs/: test_localfs_env.py  test_localfs_interface.py
tests/unit/router/: conftest.py  test_router_delete.py  test_router_index.py  test_router_list.py  test_router_rbac.py  test_router_uploads.py  test_router_utils.py
