[project]
name = "fast-pypi"
description = ""
authors = [{ name = "hotdog-werx", email = "james.trousdale@protonmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ['version']

dependencies = [
  'pydantic >=2.11.4, <3',
  'fastapi >=0.115.12, <1',
]

[dependency-groups]
dev = [
  "coverage >=7.2.3",
  "greenlet >=3.1.1, <4",
  "pytest >= 8.3.3, <9",
  "pytest-mock >=3.12.0",
  "basedpyright >= 1.22.0, <2",
  "ruff >=0.8.0, < 1",
]

[tool.hatch.version]
path = 'packages/python/fast_pypi/version.py'

[tool.hatch.build.targets.sdist]
include = ['/README.md', '/CHANGELOG.md', 'packages/python/fast_pypi']

[tool.hatch.build.targets.wheel]
packages = ['packages/python/fast_pypi']


[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]

[tool.ruff]
extend = '.codeguide/config/ruff.toml'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
